ostatnie szlify: dodano ciemny motyw, poprawiono inputy (np. siła przewijania scrolla ma znaczenie jak szybko gazujesz, małe poprawki simulator, głównie pozmienianu gui